# TUNA

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml
QuantumTUNA.egg-info/: SOURCES.txt
TUNA/: TUNA-plot-temp.pkl  __init__.py  ls_mp2.py  tuna.py  tuna_basis.py  tuna_calc.py  tuna_cc.py  tuna_ci.py  tuna_dft.py  tuna_energy.py  tuna_freq.py  tuna_guess.py  tuna_kernel.py  tuna_md.py  tuna_molecule.py  tuna_mp.py  tuna_opt.py  tuna_optfreq.py  tuna_out.py  tuna_postscf.py  tuna_props.py  tuna_scf.py  tuna_thermo.py  tuna_util.py  tuna_xc.py
TUNA/tuna_integrals/: setup.py  tuna-trajectory-Harry's MacBook Air.xyz  tuna-trajectory.xyz  tuna_integral.c  tuna_integral.cp312-win_amd64.pyd  tuna_integral.pyx
wheelhouse/: quantumtuna-0.7.0-cp312-cp312-win32.whl  quantumtuna-0.7.0-cp312-cp312-win_amd64.whl  quantumtuna-0.7.0-cp313-cp313-win32.whl  quantumtuna-0.7.0-cp313-cp313-win_amd64.whl  quantumtuna-0.7.0-cp314-cp314-win32.whl  quantumtuna-0.7.0-cp314-cp314-win_amd64.whl  quantumtuna-0.7.0-cp314-cp314t-win32.whl  quantumtuna-0.7.0-cp314-cp314t-win_amd64.whl
