[build-system]
requires = [
  "setuptools>=61",
  "wheel",
  "Cython>=0.29",
  "numpy>=1.26.0",
  "scipy==1.16.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "QuantumTUNA"
dynamic = ["version"]
authors = [
  { name="Harry Brough", email = "harry.brough@icloud.com"}
]
keywords = ["quantum chemistry", "molecular physics", "hartree-fock", "mp2", "dft", "coupled cluster", "theoretical chemistry"]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "termcolor",
]

description = "A user-friendly quantum chemistry program for diatomics."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]


[tool.setuptools.packages.find]
where = ["."]
include = ["TUNA", "TUNA.tuna_integrals*"]

[project.urls]
Repository = "https://github.com/h-brough/TUNA"